2011-12-11  Kaz Kylheku  <kaz@kylheku.com>

	Bignum division implemented. More portability bugs found in MPI:
	code like 1 << n, where n exceeds the width of the type int.

	* arith.c (trunc): New function, reimplementation of removed
	trunc from lib.c.

	* lib.c (trunc): Removed.

	* mpi-patches/fix-bad-shifts: New file.

2011-12-11  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (ABS): New macro.
	(plus, minus): Bugfix: must not pass signed values to mp_add_d and
	mp_sub_d functions.
	(mul): Must not pass signed value to mp_mul_d.  Also, fixed type check
	on wrong argument in the (TAG_PTR, TAG_NUM) case.

2011-12-11  Kaz Kylheku  <kaz@kylheku.com>

	Removing this crutch; it's not that useful.

	* arith.txr: File removed.

2011-12-11  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c: Regenerated.

	* arith.txr (normalize): Bugfix: was not turning +/- NUM_MAX bignums
	into fixnums.

2011-12-11  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c: Regenerated.

	* arith.txr (highest_bit): Missing #else added, fixing
	SIZEOF_PTR == 4 case.

2011-12-11  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c: Regenerated.

	* arith.txr (highest_bit): Oops, half the logic for
	the 64 bit case was missing due to to a cut and paste mistake.

2011-12-11  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c: Regenerated.

	* arith.txr (highest_bit): New function.
	(mul): Use highest_bit instead of shift based algorithm.

2011-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim (txr_atat): New match. The @@ sequence is recognized
	properly and highlighted.

2011-12-10  Kaz Kylheku  <kaz@kylheku.com>

	Bignum support in mult function.

	* arith.c: Regenerated.

	* arith.txr (CNUM_BIT): New constant.
	(bignum, bignum_dbl_ipt): New static functions.
	(@{add-fname}): Use bignum function.
	(mul): New functions, rewrite of mul from lib.c.

	* lib.c (mul): Function removed.

	* mpi-patches/add-mp-set-intptr (mp_set_intptr): Revised patch.
	Local variable v should be int_ptr_t not unsigned long.