@@ -512,7 +512,7 @@ val trunc(val anum, val bnum)
       int neg = ((a < 0 && b > 0) || (a > 0 && b < 0));
 
       if (b == 0)
-        uw_throw(numeric_error_s, lit("division by zero"));
+        uw_throw(numeric_error_s, lit("trunc: division by zero"));
 
       {
         cnum quot = ap / bp;
@@ -531,7 +531,7 @@ val trunc(val anum, val bnum)
         cnum b = c_num(bnum);
         cnum bp = ABS(b);
         if (mp_div_d(mp(anum), bp, mp(n), 0) != MP_OKAY)
-          uw_throw(numeric_error_s, lit("division by zero"));
+          uw_throw(numeric_error_s, lit("trunc: division by zero"));
         if (b < 0)
           mp_neg(mp(n), mp(n));
       } else {
@@ -539,7 +539,7 @@ val trunc(val anum, val bnum)
         mp_init(&tmp);
         mp_set_intptr(&tmp, c_num(bnum));
         if (mp_div(mp(anum), &tmp, mp(n), 0) != MP_OKAY)
-          uw_throw(numeric_error_s, lit("division by zero"));
+          uw_throw(numeric_error_s, lit("trunc: division by zero"));
       }
       return normalize(n);
     }
@@ -550,11 +550,68 @@ val trunc(val anum, val bnum)
       type_check(bnum, BGNUM);
       n = make_bignum();
       if (mp_div(mp(anum), mp(bnum), mp(n), 0) != MP_OKAY)
-          uw_throw(numeric_error_s, lit("division by zero"));
+          uw_throw(numeric_error_s, lit("trunc: division by zero"));
       return normalize(n);
     }
   }
   uw_throwf(error_s, lit("trunc: invalid operands ~s ~s"), anum, bnum, nao);
+  abort();
+}
+
+val mod(val anum, val bnum)
+{
+  int tag_a = tag(anum);
+  int tag_b = tag(bnum);
+
+  switch (TAG_PAIR(tag_a, tag_b)) {
+  case TAG_PAIR(TAG_NUM, TAG_NUM):
+    {
+      cnum a = c_num(anum);
+      cnum b = c_num(bnum);
+
+      if (b == 0)
+        uw_throw(numeric_error_s, lit("mod: division by zero"));
+
+      {
+        cnum m = a % b;
+        return num(m < 0 ? m + ABS(b) : m);
+      }
+    }
+  case TAG_PAIR(TAG_NUM, TAG_PTR):
+    type_check(bnum, BGNUM);
+    return zero;
+  case TAG_PAIR(TAG_PTR, TAG_NUM):
+    {
+      type_check(anum, BGNUM);
+      if (sizeof (int_ptr_t) <= sizeof (mp_digit)) {
+        cnum b = c_num(bnum);
+        cnum bp = ABS(b);
+        mp_digit n;
+        if (mp_mod_d(mp(anum), bp, &n) != MP_OKAY)
+          uw_throw(numeric_error_s, lit("mod: division by zero"));
+        return num(n);
+      } else {
+        val n = make_bignum();
+        mp_int tmp;
+        mp_init(&tmp);
+        mp_set_intptr(&tmp, c_num(bnum));
+        if (mp_mod(mp(anum), &tmp, mp(n)) != MP_OKAY)
+          uw_throw(numeric_error_s, lit("mod: division by zero"));
+        return normalize(n);
+      }
+    }
+  case TAG_PAIR(TAG_PTR, TAG_PTR):
+    {
+      val n;
+      type_check(anum, BGNUM);
+      type_check(bnum, BGNUM);
+      n = make_bignum();
+      if (mp_mod(mp(anum), mp(bnum), mp(n)) != MP_OKAY)
+          uw_throw(numeric_error_s, lit("mod: division by zero"));
+      return normalize(n);
+    }
+  }
+  uw_throwf(error_s, lit("mod: invalid operands ~s ~s"), anum, bnum, nao);
   abort();
 }
 
