@@ -1,5 +1,12 @@
 2011-12-11  Kaz Kylheku  <kaz@kylheku.com>
 
+	* arith.c (trunc): Error messages prefixed with trunc:.
+	(mod): New function, reimplementation of removed mod from lib.c.
+
+	* lib.c (mod): Function removed.
+
+2011-12-11  Kaz Kylheku  <kaz@kylheku.com>
+
 	Bignum division implemented. More portability bugs found in MPI:
 	code like 1 << n, where n exceeds the width of the type int.
 
